# oo-solid-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md
chapter-02/: Cargo.toml  README.md
chapter-02/examples/: calculate_employees_salary.rs
chapter-02/src/: lib.rs
chapter-03/: Cargo.toml  README.md
chapter-03/examples/: generate.rs
chapter-03/src/: lib.rs
chapter-04/: Cargo.toml  README.md
chapter-04/examples/: calculate_price.rs
chapter-04/src/: lib.rs
chapter-05/: Cargo.toml  README.md
chapter-05/examples/: process.rs
chapter-05/src/: lib.rs
