[package]
name = "chapter-02"
version = "0.1.0"
authors = ["Rodrigo Casara <rodrigocasara@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
derive_more = "0.99.11"

[dev-dependencies]
pretty_assertions = "0.6.1"

[[example]]
name = "calculate_employees_salary"
path = "examples/calculate_employees_salary.rs"
